# solana-indexer

./: .env_example  .gitignore  NOTICE  README.md  pyproject.toml
.github/: license-notice.txt
.github/workflows/: license-check.yml  license-insert.yml
ionic_solana_indexer/block/: block.py  block_structs_base64.py
ionic_solana_indexer/block/transactions/: raw_transaction.py  transaction_errors.py
ionic_solana_indexer/coders/: base_coder.py  spl_token_coder.py
ionic_solana_indexer/data_source/: data_source.py
ionic_solana_indexer/data_source/rpc/: model.py  rpc_data_source.py  rpc_transaction_converter.py
ionic_solana_indexer/utils/: idl_converter.py  known_programs.py
