[tool.poetry]
name = "ionic_solana_indexer"
version = "0.1.0"
description = ""
authors = ["pawel <pawel.rainer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
pytest = "^8.3.2"


[tool.ruff]
exclude = ["*.ipynb"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
