[tool.poetry]
name = "ionic_solana_indexer"
version = "0.1.0"
description = ""
authors = ["pawel <pawel.rainer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

msgspec = "^0.19.0"
aiohttp = "^3.12.15"
loguru = "^0.7.3"
dotenv = "^0.9.9"
borsh-construct = "^0.1.0"
base58 = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
